# OSFinalProject_BlackAndWhiteFS

./: .gitignore  DOCUMENTATION.md  QUICKSTART.md  README.md  build.ps1  build.sh
Filesystem/: .gitignore  Cargo.toml  DELIVERABLES_CHECKLIST.md  Makefile  PROJECT_SUMMARY.md  config.ini  test.sh
Filesystem/bwfs/: Cargo.toml
Filesystem/bwfs/src/: config.rs  inode.rs  storage.rs
Filesystem/mkfs-bwfs/: Cargo.toml
Filesystem/mount-bwfs/src/: main.rs
bwfs/src/: fs.rs  inode.rs  lib.rs  network.rs  storage.rs
bwfs_data/: metadata.json
mkfs-bwfs/src/: main.rs
mount-bwfs/: Cargo.toml
mount-bwfs/src/: main.rs
