[workspace]
members = [
    "bwfs",
    "mkfs-bwfs",
    "mount-bwfs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BWFS Team"]

[workspace.dependencies]
# FUSE library for Linux
fuser = "0.14"
# Image processing for black/white pixel storage
image = "0.24"
# INI file parsing
configparser = "1.0"
# Async runtime for TCP/IP
tokio = { version = "1.35", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
log = "0.4"
env_logger = "0.11"
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Time utilities
chrono = "0.4"
# Byte manipulation
byteorder = "1.5"
